# deep4production

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
deep4production/: README.md  __init__.py
deep4production/classes/: d4d_dataset.py  d4d_downscaler.py  d4d_pydataset.py  d4d_trainer.py  d4p_dataset.py  d4p_downscaler.py  d4p_pydataset.py  d4p_trainer.py
deep4production/classes/subclasses_cnn/: d4d_trainer_DeepESD.py  d4d_trainer_DeepESDcrpsTemporal.py
deep4production/classes/subclasses_diff/: d4d_pydataset_resdiff.py  d4d_trainer_resdiff.py
deep4production/classes/subclasses_gnn/: d4d_downscaler_DeepESG.py  d4d_downscaler_GNN4CD.py  d4d_trainer_DeepESG.py  d4d_trainer_GNN4CD.py
deep4production/cli/: create.py  downscale.py  train.py
deep4production/console/: main_create.py  main_downscale.py  main_inspect.py  main_train.py
deep4production/core/datasets/: dataset.py
deep4production/core/downscalers/: downscaler.py  downscaler_gnn4cd.py
deep4production/deep/: loss.py  postprocessors.py  pred.py  schedulers.py  train.py  utils.py
deep4production/utils/: diagnostics.py  forcings.py  formatting.py  general.py  imputers.py  mlflow.py  normalizers.py  operators.py  temporal.py  trans.py  zarr.py
deep4production/visualization/: spatial.py  viz.py  xyplots.py
notebooks/: Deep4Production Tutorial: CORDEX-BENCH Alps Case Study with DeepESD copy.md  Deep4Production Tutorial: CORDEX-BENCH Alps Case Study with DeepESD.md
notebooks/Deep4Production Tutorial: CORDEX-BENCH Alps Case Study with DeepESD/: Deep4Production Tutorial: CORDEX-BENCH Alps Case Study with DeepESD.md
recipes/create_datasets/: template.yaml
recipes/inference/: gnn4cd_qmse.yaml
recipes/training/: deepesd_asym.yaml  deepesd_mse.yaml  gnn4cd_qmse.yaml
(+14 files in other folders)
